*FormatReader: Use .valueOf when creating numeric types